# OpusFilter

./: .buildinfo  .gitignore  .pylintrc  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  LICENSE  README.md  automatic_configuration.html  command_line_tools.html  genindex.html  index.html  installation.html  objects.inv  overview.html  pyproject.toml  references.html  requirements-py36.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: CHANGELOG.doctree  CONTRIBUTING.doctree  automatic_configuration.doctree  command_line_tools.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  references.doctree  usage.doctree
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  command_line_tools.md.txt  index.rst.txt  installation.md.txt  references.rst.txt  usage.md.txt
_static/: documentation_options.js
docs/: CHANGELOG.md  CONTRIBUTING.md  alignment_model_filters.md  automatic_configuration.md  bpe_segmentation.md  command_line_tools.md  conf.py  custom_preprocessors.md  downloading_and_selecting_data.md  filtering_and_scoring.md  index.rst  installation.md  language_model_filters.md  other_tools.md  overview.md  quickstart.md  references.bib  requirements.txt  sentence_embedding_filters.md  special_character_and_similarity_filters.md  tokenizer.md  usage.md  using_score_files.md
example_configs/: README.md  create_ce_sets.yaml  create_domain_sets.yaml  create_roc_auc_sets.yaml  prepare_data.yaml  qed_lm_langid.yaml
filters/: alignment_model_filters.html  custom_filters.html  length_filters.html  (+4 more)
(+110 files in other folders)
