[build-system]
requires = [
    "setuptools>=42,<58.2",          # pyhash-0.9.3 fails to install with setuptools-58.2.0 when using Python 3.7
    "setuptools_scm[toml]>=3.4,<7",  # setuptools_scm 7.0.5 fails with Python 3.6
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
